--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,74 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background: #0e7e12;
+  box-sizing: border-box;
+  margin-top: 50px;
+}
+
+.card {
+  background: white;
+  height: 550px;
+  width: 350px;
+  border: grey;
+  border-radius: 5%;
+  margin: auto;
+  padding: 30px;
+  padding-top: 40px;
+  font-size: 45px;
+
+  /* margin: auto;
+  height: 200px;
+  font-size: 80px;
+  width: 250px;
+  padding: 20px;
+  padding-top: 180px;
+  border-radius: 5px;
+  position: relative;
+
+    &:before {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    font-size: 80px;
+  }
+
+  &:after {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-size: 80px;
+  }
+  &.spade:before,
+  &.spade:after {
+    content: "\2660";
+  }
+  &.club:before,
+  &.club:after {
+    content: "\2663";
+  }
+  &.heart:before,
+  &.heart:after {
+    content: "\2665";
+    color: red;
+  }
+  &.diamond:before,
+  &.diamond:after {
+    content: "\2660";
+    color: red;
+  } */
+}
+.top-suit {
+  width: 200px;
+  height: 200px;
+}
+.bottom-suit {
+  width: 300px;
+  height: 100px;
+  text-align: right;
+}
+.card-number {
+  width: 300px;
+  height: 300px;
+  text-align: center;
+}
